# controlbot

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
control_employee/: control_employee.json  manage.py
control_employee/bot/: models.py
control_employee/bot/migrations/: 0001_initial.py  0002_alter_tguser_user_type.py  0003_alter_tguser_department.py  0004_alter_department_begin_alter_department_begin_lanch_and_more.py  0005_alter_tguser_username.py  0006_remove_tguser_is_new.py  0007_alter_tguser_tg_id.py
control_employee/control_employee/: asgi.py  settings.py  urls.py  wsgi.py
control_employee/scripts/: bot.py
