[tool.poetry]
name = "controlemployee"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
psycopg2-binary = "^2.9.9"
django = "^5.1.2"
django-extensions = "^3.2.3"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
